完成了今天吃什么和截图语录的重构

--- a/.env.dev
+++ b/.env.dev
@@ -3,3 +3,7 @@ PORT=8080
 LOG_LEVEL=DEBUG
 FASTAPI_RELOAD=true
 GOCQ_ACCOUNTS=[{ "uin": "1772585179" }]
+COMMAND_START=["/", ".", "!"]
+repeater_group = []  # 支持复读的群号
+repeater_min_message_length = 1  # 触发复读的文本消息最小长度（表情和图片无此限制）
+repeater_min_message_times = 2  # 触发复读的消息次数
